--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -34,8 +34,8 @@ jobs:
         run: |
           msbuild /p:Configuration=Release /p:Platform=x64 BigBaseV2.sln /warnaserror
 
-      - name: Rename DLL to YimMenu.dll
-        run: ren BigBaseV2.dll YimMenu.dll
+      - name: Rename DLL to UND34D.dll
+        run: ren UND34D.dll UND34D.dll
         working-directory: bin/Release/
 
       - name: Upload Artifact
@@ -43,7 +43,7 @@ jobs:
         with:
           name: binary
           path: |
-            bin/Release/YimMenu.dll
+            bin/Release/UND34D.dll
 
       - name: Generate Build Info
         id: var
@@ -65,14 +65,14 @@ jobs:
         id: detections
         uses: yimura/gtav-sigscan-action@v0.0.3
         with:
-          file: ./YimMenu.dll
+          file: ./UND34D.dll
 
       - name: Notify on Discord
         if: ${{ steps.detections.outputs.is_detected == 'true' }}
         uses: tsickert/discord-webhook@v4.0.0
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          embed-title: YimMenu has been detected by the sigscanner!
+          embed-title: UND34D has been detected by the sigscanner!
           embed-description: |
             The following bits have been detected:
             ```yml
@@ -107,7 +107,7 @@ jobs:
       - name: Echo build sha256
         id: build_sha
         run: |
-          sha256sum YimMenu.dll > sha256.checksum
+          sha256sum UND34D.dll > sha256.checksum
           echo "::set-output name=build_sha::$(cat sha256.checksum)"
           cat sha256.checksum
 
@@ -138,7 +138,7 @@ jobs:
             Alternatively you can download the build artifacts, generate a SHA256 checksum and compare it with the below binary.
             Build artifacts ARE NOT automatically the same as release assets since release assets can be modified afterwards.
 
-            These are nightly builds of YimMenu, they are provided for testing purposes only:
+            These are nightly builds of UND34D, they are provided for testing purposes only:
             - Test if your build environment produces a broken BigBaseV2.dll
             - Test if source code is out of date and no longer compatible with the current version of GTA V
 
@@ -149,4 +149,4 @@ jobs:
             ${{ needs.build_nightly.outputs.full_sha }}
             ```
           files: |
-            YimMenu.dll
+            UND34D.dll
