--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,24 @@
 [submodule "vendor/json"]
 	path = vendor/json
-	url = https://github.com/nlohmann/json
+	url = https://github.com/UND34Dz/json
 	ignore = dirty
 [submodule "vendor/MinHook"]
 	path = vendor/MinHook
-	url = https://github.com/YimMenu/minhook
+	url = https://github.com/UND34Dz/minhook
 	ignore = dirty
 [submodule "vendor/g3log"]
 	path = vendor/g3log
-	url = https://github.com/YimMenu/g3log.git
+	url = https://github.com/UND34Dz/g3log.git
 	ignore = dirty
 [submodule "vendor/GTAV-Classes"]
 	path = vendor/GTAV-Classes
-	url = https://github.com/Yimura/GTAV-Classes.git
+	url = https://github.com/UND34Dz/GTAV-Classes.git
 	ignore = dirty
 [submodule "vendor/ImGui"]
 	path = vendor/ImGui
-	url = https://github.com/ocornut/imgui.git
+	url = https://github.com/UND34Dz/imgui.git
 	ignore = dirty
 [submodule "vendor/pugixml"]
 	path = vendor/pugixml
-	url = https://github.com/zeux/pugixml.git
+	url = https://github.com/UND34Dz/pugixml.git
 	ignore = dirty
